[package]
name = "dvi"
version = "0.2.2"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
description = "A parser for the \"device independent file\" (dvi) format"
license = "MIT/Apache-2.0"
include = ["src/**/*", "Cargo.toml"]
repository = "https://github.com/derekdreery/dvi-rs"
categories = ["parsing", "encoding"]
keywords = ["dvi", "tex", "latex"]
edition = "2018"

[dependencies]
byteorder = "^1.1"
nom = "5.1.1"

[dev-dependencies]
structopt = "0.3.14"
anyhow = "1.0.31"

